if(NOT WITH_LIBDNF_CLI)
    return()
endif()


file(GLOB_RECURSE LIBDNF_CLI_HEADERS *.hpp)
install(FILES ${LIBDNF_CLI_HEADERS} DESTINATION include/libdnf-cli COMPONENT "lib_cli_dev")
set(CPACK_DEBIAN_LIB_CLI_PACKAGE_NAME "libdnf-cli")
set(CPACK_DEBIAN_LIB_CLI_PACKAGE_NAME "${CPACK_DEBIAN_LIB_CLI_PACKAGE_NAME}" PARENT_SCOPE)
set(CPACK_DEBIAN_LIB_CLI_DEV_PACKAGE_NAME "${CPACK_DEBIAN_LIB_CLI_PACKAGE_NAME}-dev" PARENT_SCOPE)
